# opencv_cpp_basics

./: CMakeLists.txt  README.md
src/: array_types.cpp  basic_functions.cpp  bitwise_ops.cpp  drawing_functions.cpp  hello_cv.cpp  inrange_hsv.cpp  mouse_events.cpp  mouse_userdata _buttons.cpp  mouse_userdata_buttons.cpp  record_vid_cam.cpp  record_video.cpp  simple_webcam.cpp  split_channels.cpp  trackbar_wsum.cpp
